[package]
name = "si4032_driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.7"
cortex-m = "0.7.7"

[dependencies.stm32f1xx-hal]
features = ["stm32f100", "rt", "medium"]
version = "0.10.0"
